# national_data_science_bowl_2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commit_to_rep.sh  config.cmake  transform.py  utils.py
alexcode/code/: Preprocessing.py  Train.py  comb.py  data.py  model.py  submission.py  submission_600.py  train.py  train_1.py  train_2.py  train_600.py  train_600_1.py  train_combine.py  utils.py
alexcode/code/logs/: log.txt  val_loss.txt  val_loss.txt1  val_loss.txt_1  val_loss_1.txt  val_loss_cur_best.txt
alexcode/notebooks/: Combine.ipynb
apps/: CMakeLists.txt  annotate_lv.cpp  chan_vese.cpp  compute_volume.cpp  contour_extraction.cpp  contour_extraction.hpp  cpr_test.cpp  cpr_train.cpp  dicom_reader.cpp  dicom_reader.hpp  hog_lv_detector.cpp  hog_lv_detector.hpp  hog_parameters.hpp  hog_prepare_samples.cpp  hog_train.cpp  test_dicom.cpp  test_mrf.cpp  test_slic.cpp
apps/cpr/: CMakeLists.txt  FaceAlignment.h  Fern.cpp  FernCascade.cpp  ShapeRegressor.cpp
cascaded_pose_regression/: TestDemo.cpp  TrainDemo.cpp
chan_vese_segmentation/: CMakeLists.txt  makefile.vc
libs/chan_vese/: CMakeLists.txt  InteractiveDataRect.cpp
libs/dicom/: CMakeLists.txt  byteswap.hpp  byteswap1.hpp  dicom.cpp  dicom.hpp
libs/mrf/: CMakeLists.txt  graph.h  icm_graph.cpp
libs/opencv/: CMakeLists.txt  cvconfig.h  plot.cpp  plot.hpp  precomp.hpp  seeds.cpp  slic.cpp
libs/slic/: CMakeLists.txt  slic.cpp  slic.h
scripts/: convert_contour_to_landmarks.py  distribute_dataset.sh  train_naive_regression_model.py
src/: main.cpp
theano/: predict.py  train.py
theano/models/: deeper.py
